Test/dafny4/git-issue225.dfy.expect
git-issue225.dfy(9,11): Error: a compiled module (SiblingModule) is not allowed to import an abstract module (AbstractModule)
git-issue225.dfy(21,18): Error: a compiled module (SiblingModule) is not allowed to import an abstract module (AbstractModule)
git-issue225.dfy(32,17): Error: a compiled module (ImportAlias) is not allowed to import an abstract module (AbstractModule)
git-issue225.dfy(44,19): Error: a compiled module (QualifiedImport) is not allowed to import an abstract module (M.AbstractModule)
git-issue225.dfy(59,41): Error: a compiled module (TwoAlias) is not allowed to import an abstract module (M.AnotherAbstractModule.A)
git-issue225.dfy(72,4): Error: a compiled module is not allowed to use an abstract module (AbstractModule)
git-issue225.dfy(87,4): Error: a compiled module is not allowed to use an abstract module (AbstractModule)
git-issue225.dfy(88,4): Error: a compiled module is not allowed to use an abstract module (AbstractModule)
git-issue225.dfy(89,11): Error: a compiled module is not allowed to use an abstract module (AbstractModule)
git-issue225.dfy(90,13): Error: a compiled module is not allowed to use an abstract module (AbstractModule)
git-issue225.dfy(91,19): Error: a compiled module is not allowed to use an abstract module (AbstractModule)
git-issue225.dfy(92,13): Error: a compiled module is not allowed to use an abstract module (AbstractModule)
git-issue225.dfy(93,19): Error: a compiled module is not allowed to use an abstract module (AbstractModule)
13 resolution/type errors detected in git-issue225.dfy
